# DILL-bot

./: .cursorignore  .cursorrules  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  start.py
alembic/: env.py
alembic/versions/: 088dc53612e1_initial_migration.py  0a8f81d96ca4_added_the_requested_important_features.py  a231535cb121_new_spreadsheet_feature_check.py
data/: settings.template.yml
src/: __init__.py  bot.py  config.py  help.py  models.py  settings.py  spreadsheets.py  sync.py  utils.py
src/cogs/: google_sheets.py  help.py  settings.py
src/cogs/settings/: permissions.py  settings.py
src/core/: client.py  config.py  feature_manager.py
src/core/database/: __init__.py  database.py  models.py
src/events/: __init__.py  on_message.py  on_ready.py
src/features/: commands.py  events.py
src/features/help/: cog.py
src/features/spreadsheets/: cog.py  google_client.py
src/features/spreadsheets/helpers/: discord.py  google.py
src/services/: __init__.py  permission_service.py  settings_service.py
src/utils/: checks.py  decorators.py  loader.py  logger.py  settings_manager.py
src/utils/helpers/: error_handler.py  loader.py  sync.py
